--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   ],
   "sideEffects": false,
   "scripts": {
+    "dev": "ts-node src/index.ts",
     "clean": "rimraf dist",
     "build": "npm run clean && tsc",
     "prepare": "npm run build",
@@ -28,10 +29,6 @@
     "preset": "ts-jest",
     "testEnvironment": "node"
   },
-  "keywords": [
-    "isbndb",
-    "isbn",
-    // …
   "keywords": [
     "isbndb",
     "isbn",
@@ -53,15 +50,17 @@
     "node": ">=18"
   },
   "devDependencies": {
-    "rimraf": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.17",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
+    "dotenv": "^16.5.0",
     "eslint": "^9.26.0",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
+    "rimraf": "^5.0.0",
     "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
