--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -11,4 +11,4 @@ jobs:
       - name: Release Please
         uses: googleapis/release-please-action@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
